<resources>
    <string name="app_name">Checkout Price Calculator</string>
    <string name="add_discount">Add Discount</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="enter_voucher_code">Enter Voucher Code</string>
    <string name="add_tax">Add Tax</string>
    <string name="cart">Cart</string>
    <string name="quantity_0">Quantity: 0</string>
    <string name="_146_99">$146.99</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="checkout">Checkout</string>
    <string name="base_price">Base Price:</string>
    <string name="tax">Tax:</string>
    <string name="final_price">Final Price:</string>
    <string name="confirm_checkout">Confirm Checkout</string>
    <string name="taxPercent">Tax %</string>
</resources>
